Change some Feature

--- a/Static-Resume-Builder/index.html
+++ b/Static-Resume-Builder/index.html
@@ -12,7 +12,7 @@
        <section>
         <div class="left-div">
               <div class="img-div">
-                    <img src="./Image/Passport size.jpg" alt="">
+                    <img src="./Image/CotePant Shahzain Ali.jpg" alt="">
               </div>
               <div class="about-div">
                     <h2>About me</h2>
@@ -21,12 +21,17 @@
               <div class="personal-div">
                     <h2>Personal info</h2>
                     <ul>
-                        <li>Name: Shahzain Ali</li>
-                        <li class="email-li">Email: <a href="mailto:alishahzain604@gmail.com"> alishahzain604@gmail.com </a></li>
-                        <li>Phone: +92 336 3005909</li>
-                        <li>Location: Karachi, Pakistan</li>
-                        <li class="linkedin-li">LinkedIn:<a href="https://www.linkedin.com/public-profile/settings?trk=d_flagship3_profile_self_view_public_profile"> www.linkedin.com/in/shahzain-ali-518b862ba</a></li>
-                        <li>Date of Birth: February 2, 2003</li>
+                        <li>
+                            <span class="label">Name:</span> Shahzain Ali
+                          </li>
+                          <li class="email-li">
+                            <span class="label">Email:</span> 
+                            <a href="mailto:alishahzain604@gmail.com">alishahzain604@gmail.com</a>
+                          </li>
+                        <li><span class="label">Phone:</span>+92 336 3005909</li>
+                        <li><span class="label">Location:</span> Karachi, Pakistan</li>
+                        <li class="linkedin-li"><span class="label">Linkedin:</span> <div class="linkedin-div"><a href="https://www.linkedin.com/public-profile/settings?trk=d_flagship3_profile_self_view_public_profile"> www.linkedin.com/in/shahzain-ali-518b862ba</a></div></li>
+                        <li><span class="label">DOB:</span> February 2, 2003</li>
                     </ul>
               </div>
         </div>
