--- a/Dynamic-Resume-Builder/dynamic.html
+++ b/Dynamic-Resume-Builder/dynamic.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dynamic CV Generator</title>
-    <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="./css/index.css">
+
 </head>
 <body>
     <div class="container">
@@ -110,7 +111,8 @@
 
                                 <!-- Changed to type="module" -->
 
-    <script src="./dist/script.js" type="module"></script>
+            <script src="/dist/script.js" type="module"></script>
+
 
 </body>
 </html>
