--- a/Dynamic-Resume-Builder/dynamic.html
+++ b/Dynamic-Resume-Builder/dynamic.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="/index.css">
     <title>Dynamic CV Generator</title>
    
 
@@ -112,7 +112,7 @@
 
                                 <!-- Changed to type="module" -->
 
-            <script src="/dist/script.js" type="module"></script>
+            <script src="/src/script.js" type="module"></script>
 
 
 </body>
